# cargo-validate

./: Cargo.toml  README.md  cli.rs
src/: main.rs
