[package]
name = "cargo-validate"
version = "0.1.3"
edition = "2021"
license = "MIT"
repository = "http://github.com/themackabu/cargo-validate"
description = "verify everything is correct about your package before publishing"

[dependencies]
home = "0.5.9"
toml = "0.8.19"
colored = "2.1.0"
serde_json = "1.0.128"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"] }
