[package]
name = "cargo-validate"
version = "0.2.0"
edition = "2021"
license = "MIT"
repository = "http://github.com/themackabu/cargo-validate"

description = "verify everything is correct about your package before publishing"
categories = ["development-tools::cargo-plugins"]
keywords = ["cargo", "validation", "publishing", "package"]

[[bin]]
name = "cargo-validate"
path = "cli.rs"

[dependencies]
home = "0.5.9"
toml = "0.8.19"
semver = "1.0.23"
colored = "2.1.0"
toml_edit = "0.22.21"
serde_json = "1.0.128"
clap = { version = "4.5", features = ["derive"] }
reqwest = { version = "0.12.7", features = ["blocking", "json", "rustls-tls"] }
